# gwmock-noise

./: .coderabbit.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  package-lock.json  package.json  pyproject.toml  renovate.json  zensical.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  documentation.yml  draft_release.yml  publish.yml  publish_testpypi.yml  release.yml  scheduled_release.yml  support_floor_update.yml
docs/: index.md
docs/api/: index.md
docs/dev/: adding_simulators.md  code_quality.md  troubleshooting.md
docs/user_guide/: custom_simulators.md  gwosc_noise.md  installation.md  minimal_usage.md  noise_simulation.md  quick_start.md  testing.md
examples/: benchmark_ar_vs_fft.py  benchmark_correlated_ar_vs_fft.py  noise_config_example.toml  noise_config_example.yaml  noise_config_multiple_components.toml
src/gwmock_noise/: __init__.py  parallel.py  spectral.py
src/gwmock_noise/cli/: build_blip_glitch_table.py  main.py  simulate.py
src/gwmock_noise/config/: __init__.py  loader.py  models.py
src/gwmock_noise/data/: __init__.py
src/gwmock_noise/data/psd/: ET_15_HF_psd.txt  ET_20_HF_psd.txt  ET_20_full_cryo_psd.txt  __init__.py
src/gwmock_noise/diagnostics/: __init__.py  psd.py  statistics.py
src/gwmock_noise/gaussian/: __init__.py  psd.py  spectral_lines.py
src/gwmock_noise/glitches/: __init__.py  _coloring.py  deepextractor.py  gengli.py  models.py
src/gwmock_noise/gwosc/: __init__.py  fetcher.py  filters.py  models.py
src/gwmock_noise/output/: __init__.py  frame.py  gwpy.py
src/gwmock_noise/simulators/: __init__.py  _spectral.py  _stitching.py  autoregressive.py  base.py  colored.py  composite.py  correlated.py  correlated_ar.py  default.py  glitch_component.py  glitches.py  protocol.py  real_noise.py  registry.py  schumann.py  spectral_lines.py  streaming.py  white.py
src/gwmock_noise/utils/: log.py
tests/: smoke_test.py  test_autoregressive_noise.py  test_build_blip_glitch_table.py  test_cli.py  test_colored_noise.py  test_coloring.py  test_config.py  test_correlated_ar_noise.py  test_correlated_noise.py  test_deepextractor.py  test_examples_and_docs.py  test_frame_output.py  test_gengli.py  test_glitches.py  test_gwosc_fetcher.py  test_gwosc_filters.py  test_gwosc_integration.py  test_gwosc_models.py  test_gwosc_simulator.py  test_gwpy_output.py  test_import.py  test_log_and_bootstrap.py  test_output.py  test_parallel.py  test_psd_diagnostics.py  test_psd_presets.py  test_schumann_noise.py  test_simulator.py  test_spectral.py  test_spectral_covariance.py  test_spectral_lines.py  test_statistics_diagnostics.py  test_stitching.py  test_streaming_continuity.py  test_streaming_interface.py  test_window_duration.py
tests/integration/: test_correlated_noise_end_to_end.py
