[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "gwmock-noise"
authors = [{ name = "Isaac C. F. Wong" }]
description = "A Python package for simulating gravitational wave detector noise."
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
  "numpy>=2.1.0",
  "h5py>=3.12.1",
  "pydantic>=2.9.0",
  "scipy>=1.15.0",
  "pyyaml>=6.0",
  "typer>=0.13.0",
]

[project.optional-dependencies]
frame = ["gwpy>=4.0.0", "lalsuite>=7.23"]
gengli = ["gengli>=0.2.0"]
gwpy = ["gwpy>=4.0.0"]
gwosc = ["gwpy>=4.0.0", "gwosc>=0.8.0"]

[dependency-groups]
dev = [
  "ruff>=0.15.20",
  "prek>=0.4.8",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.1.1",
  "pytest-github-actions-annotate-failures>=0.4.2",
]
docs = ["zensical>=0.0.47", "mkdocstrings-python>=2.0.5"]
build = ["hatch>=1.17.1"]
release = ["git-cliff>=2.13.1"]

[project.scripts]
gwmock-noise = "gwmock_noise.cli.main:app"

[project.urls]
Documentation = "https://leuven-gravity-institute.github.io/gwmock-noise/"
Source = "https://github.com/Leuven-Gravity-Institute/gwmock_noise"
Tracker = "https://github.com/Leuven-Gravity-Institute/gwmock_noise/issues"
Home = "https://github.com/Leuven-Gravity-Institute/gwmock_noise"
"Release Notes" = "https://github.com/Leuven-Gravity-Institute/gwmock_noise/releases"

[tool.dependency-support-policy]
policy = "spec0"
groups = ["project", "optional"]
lock = "minimal"

[tool.uv-dynamic-versioning]
vcs = "git"      # default
style = "semver" # or pep440, semver, etc.

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/gwmock_noise"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 0

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov src --cov-append -m 'not integration' --cov-report=term-missing"
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit2"
markers = [
  "integration: marks as integration test",
  "notebooks: marks as notebook test",
  "gpu: marks as gpu test",
  "spark: marks tests which need Spark",
  "slow: marks tests as slow",
  "unit: fast offline tests",
]

[tool.ruff]
line-length = 120 # Matches Black's default
target-version = "py312" # Align with CI (3.12–3.14) and requires-python (>=3.12)
lint.extend-select = [
  "E",
  "F",
  "W",   # pycodestyle errors and warnings
  "I",   # isort rules
  "UP",  # pyupgrade rules
  "C90", # McCabe complexity
  "N",   # PEP8 naming
  "B",   # Bugbear (opinionated checks)
  "A",   # Flake8-builtins
  "C4",  # Flake8-comprehensions
  "PT",  # Flake8-pytest
  "RUF", # Ruff-specific rules
  "PL",  # Add pylint rules for fuller coverage
  "SIM", # Similarities
  "T10", # Debugger statements
  "DOC", # Docstring
  "D",   # Doc style
  "S",   # Security
]
lint.ignore = [
  "E501", # Line length (handled by formatter)
  "C901", # Disable overly strict complexity checks (optional, adjust as needed)
]
lint.unfixable = [] # List rules that should not be autofixed, if any
fix = true # Enable autofix

[tool.ruff.format]
quote-style = "double"       # Use double quotes for strings
indent-style = "space"       # Use spaces for indentation
docstring-code-format = true # Format code in docstrings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in the tests directory
"tests/*" = ["S101", "ARG001", "PLC0415", "PLR2004"]
# S101: allow assert statements
# ARG001: allow unused function arguments (common in fixtures)
# PLC0415: allow import statements not at the top level
# PLR2004: allow magic values in the unit tests

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
